--- a/index.html
+++ b/index.html
@@ -3,65 +3,20 @@
     <title>RPS Game</title>
     <meta content="">
     <link rel="stylesheet" href="style.css">
-    <style></style>
   </head>
   <body>
-    <script>
-      // Random Int from 0-2 inclusive
-      function getRndInteger(min, max) {
-        return Math.floor(Math.random() * (max - min) ) + min;
-      }
-      // Computer Plays a random move
-      function ComputerMove(){
-        let move = getRndInteger(0,3)
-        switch (move){
-          case 0:
-            return "rock"
-            break;
-          case 1:
-            return "paper"
-            break; 
-          case 2: 
-          return "scissors"
-          break;
-        }
-      }
-      // Checks Wins/Losses and changes Wins/Losses based on result
-      function Game(Pmove,Cmove,results){
-        if (Pmove.toLowerCase() === "rock"){
-          if (Cmove === "rock"){console.log("You Draw! Rock and Rock both Win")}
-          else if (Cmove === "paper"){console.log("You Lost! Paper beats Rock"); results[1]++}
-          else if (Cmove === "scissors"){console.log("You Won! Rock beats Scissors"); results[0]++}
-          else {console.log("Error has occured")}
-        }
-        else if (Pmove.toLowerCase() === "paper"){
-          if (Cmove === "rock"){console.log("You Won! Paper Beats Rock"); results[0]++}
-          else if (Cmove === "paper"){console.log("You Draw! Paper and Paper both Win")}
-          else if (Cmove === "scissors"){console.log("You Lost! Scissors beat Paper"); results[1]++}
-          else {console.log("Error has Occured")}
-        }
-        else if (Pmove.toLowerCase() === "scissors"){
-          if (Cmove === "rock"){console.log("You Lost! Rock beats Scissors"); results[1]++}
-          else if (Cmove === "paper"){console.log("You Won! Scissors beat Scissors"); results[0]++}
-          else if (Cmove === "scissors"){console.log("You Draw! Scissors and Scissors both Win")}
-          else {console.log("Error has Occured")}
-        }
-        else {
-          console.log("Player has made invalid move")
-          results[1]++
-        }
-        return results
-      }
-      //Main 5 game loop and input
-      let games = 0; let results = [0,0]
-      while (games < 6){
-        let PlayerMove = prompt("Choose 'Rock', 'Paper', 'Scissors'")
-        Game(PlayerMove,ComputerMove(),results)
-        games++
-      }
-      console.log("You won", results[0] ,"Games")
-      console.log("You Lost", results[1] ,"Games")
-
-    </script>
+    <h1 style="align-content: center;">Rock, Paper, Scissors</h1>
+    <br>
+    <div class="buttons">
+      <button onclick="PlayRock()">Rock</button>
+      <button onclick="PlayPaper()">Paper</button>
+      <button onclick="PlayScissors()">Scissors</button>
+      <br>
+      <button onClick="ScoreReset()" class = "reset">Reset</button>
+    </div>
+    <br>
+    <div class="play"></div>
+    <div class="stats"></div>
   </body>
+  <script src="scripts.js"></script>
 </html>
